# CsPyInterop

./: .gitignore  README.md  build-cython.ps1  pyproject.toml  setup-python.md
CsConsoleApp/: CsConsoleApp.csproj  Program.cs  PythonInterop.cs
doc/: 2026-02-01-cython-pythonnet.md  2026-02-01-research.md
pylib/: setup.py
pylib/linalg/: decomposition.py
pylib/ml/: __init__.py  pytorch_sample.py
pylib/tests/linalg/: test_decomposition.py
pylib/tests/ml/: test_pytorch_sample.py
