[project]
name = "cspyinterop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["pylib"]

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "pytest>=9.0.2",
    "setuptools>=80.10.2",
]
